# path_planning_intro

./: .gitattributes  .gitignore  README.md
osm_cartography/launch/: test_viz_osm_rviz.launch
osm_cartography/rviz/: geo_planner.rviz
route_network/: README.md
route_network/scripts/: plan_route
srv_client_plugin/: CMakeLists.txt  README.md  package.xml  scp_plugin.xml
srv_client_plugin/include/: srv_client_plugin.h
srv_client_plugin/src/: srv_client_plugin.cpp
unit1_pp/: CMakeLists.txt  README.md  package.xml
unit1_pp/launch/: dijkstra_demo.launch  move_base.launch  simulation_unit1.launch
unit1_pp/maps/: unit1_demo.yaml
unit1_pp/models/path_planning_ground/meshes/: concrete_barrier_30m.dae  concrete_barrier_l.dae  concrete_barrier_xl.dae  round_concrete_base.dae
unit1_pp/models/playground/: model.config  model.sdf
unit1_pp/rviz/: unit1.rviz
unit1_pp/scripts/: dijkstra_demo.py  openlist.py
unit1_pp/worlds/: unit1_demo.world
unit2_exercises_pp/: CMakeLists.txt  README.md  package.xml
unit2_exercises_pp/launch/: unit_2.launch
unit2_exercises_pp/rviz/: unit2_exercise.rviz
unit2_exercises_pp/scripts/: bresenham.py  unit2_exercise_solution.py
unit2_pp/: CMakeLists.txt  README.md  package.xml
unit3_exercises_pp/: CMakeLists.txt  README.md  package.xml
unit3_pp/: package.xml
unit4_exercises_pp/: CMakeLists.txt  README.md  package.xml
unit4_pp/: CMakeLists.txt  package.xml
unit5_exercises_pp/: CMakeLists.txt  package.xml
unit5_pp/: CMakeLists.txt  README.md  package.xml
unit6_pp/: CMakeLists.txt  LICENSE  README.md  package.xml
(+120 files in other folders)
